--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -348,8 +348,10 @@ fail me to tell of the multitudes of individuals \ldots
 \index{Abstract}%
 \indent
 
-This report is a case study of applying encapsulation, composition and distributed synchronization techniques to web application architecture with the use of Web Components, a proposed extension to the W3C HTML5 document standard. 
-The author presents Speakur, a real-time social discussion plugin for the mobile and desktop web, as an example of applying HTML5 Web Component technologies to realize software engineering principles such as modularity, encapsulation and separation of concerns when composing pages out of components sourced from a diverse set of authors.
+This report is a case study of applying encapsulation, composition and distributed synchronization techniques to web application architecture with the use of Web Components, 
+a proposed extension to the W3C HTML5 document standard. 
+The author presents Speakur, a real-time social discussion plugin for the mobile and desktop web, 
+as an example of applying HTML5 Web Component technologies to realize software engineering principles such as modularity, encapsulation and separation of concerns when composing applications from components sourced from diverse authors.
 
 Web authors can add a Speakur discussion to their page by inserting a simple HTML element at the desired spot to give the page a real-time discussion or feedback system.
 Speakur uses the Polymer framework's implementation of the draft Web Components (WC) standard to achieve encapsulation of its internal implementation details from the containing page and present a simplified, well defined interface (API).
