--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -140,24 +140,25 @@ What previously required a highly integrated, high-overhead development model or
 \section{Structure of This Report}
 \index{Structure of This Report@\emph{Structure of This Report}}%
 
-The goal of this report is to demonstrate the application of software engineering design patterns embodied in the  W3C proposed Web Components standard such as encapsulation, modular composition, and automatic synchronization of application state. 
+The goal of this report is to demonstrate the application of software engineering design patterns embodied in the  W3C proposed Web Components standard such as encapsulation, modular composition, and the synchronization of distributed application state. 
 This report discusses many of the goals and principles of the Web Components initiative and how a number of different technologies taken together help raise the overall level of abstraction for content authors, web engineers, and application developers --- which I will refer to collectively as (web) authors for short.
 
 The Background section provides an introduction to some of the architectural problems inherent in modern web authoring and how Web Components (WC) address them. 
-It also provides some background on software engineering design patterns that are embodied in Web Components such as encapsulation, composition, and inheritance, as well as technologies such as WebSockets and NoSQL databases.
+It also provides some background on software engineering design patterns that are embodied in Web Components such as encapsulation and composition.
 It describes some of the motivations behind the development of Speakur and some of the specific software engineering questions it addresses, such as the ability to provide a hassle-free way to host an embedded discussion forum inside an arbitrary web resource in a way that is fully encapsulated.
 
-The Approach section details the specific structures and techniques used when constructing a Web Component, and describes the technology and software architecture choices that went into Speakur. 
-It describes how Speakur uses Web Components to implement encapsulated modules whose internals are protected from unintentional outside influence.
+The Approach section details the specific structures and techniques used when constructing a Web Component, and describes the high level software architecture choices that went into Speakur. 
+It describes how Speakur uses Web Components to implement encapsulated modules whose internals are protected from unintentional outside influence. 
+It also describes how the choice of the Firebase cloud database service and its Websocket-based event notification system impacts Speakur's architecture.
 
-The Implementation section describes the application of Web Component principles to the specific task of providing a flexible and suitably generic discussion forum / commenting plugin for both desktop and mobile browsers. 
-It describes the overall architecture, code flow, and synchronization process.
+The Implementation section shows how to apply Web Component principles to the task of creating a flexible and generic discussion forum for both desktop and mobile browsers. 
+It describes the low level architecture, code flow, and synchronization process.
 An important topic in this section is security: how can we implement a largely client-based system while maintaining some kind of data integrity?
 
 This is followed by an Analysis section which discusses some of the outcomes as compared to the original goals and also looks at the impact of the selection of Web Components, Polymer, Firebase and some of the other architectural choices. 
 A few quantitative results are included, I hope \textbf{(TODO)}.
 
-Finally, the Conclusion section is just all kinds of awesome and wraps up the report \textbf{(TODO)}. 
+Finally, the Conclusion section is there and wraps up the report with various words \textbf{(TODO)}. 
 
 \section{Source Code and Demonstration Resources}
 \index{Source Code and Demonstration Resources@\emph{Source Code and Demonstration Resources}}%
@@ -170,7 +171,7 @@ custom HTML element for the use of web authors in their own pages.
 % XXX TODO: bold around \tcode has no effect?
 % http://tex.stackexchange.com/questions/215482/how-do-i-get-texttt-with-bold-face-in-latex
 
-The Speakur source code and component documentation can be found here on GitHub.com:
+The Speakur source code and component documentation can be found on the social coding site GitHub.com:
 
 \tcode{\url{https://github.com/Preston-Landers/speakur-discussion}}
 
