--- a/latex/codelistings.tex
+++ b/latex/codelistings.tex
@@ -57,7 +57,8 @@
 	% scripts
 	</script, <script,
   % More tags...
-  <canvas, /canvas>, <svg, <rect, <animateTransform, </rect>, </svg>, <video, <source, <iframe, </iframe>, </video>, <image, </image>, <template, </template, <my-element, </my-element
+  <canvas, /canvas>, <svg, <rect, <animateTransform, </rect>, </svg>, <video, <source, <iframe, </iframe>, </video>, <image, </image>, <template, </template, <my-element, </my-element,
+  <speakur-discussion, </speakur-discussion
   },
   ndkeywords={
   % General
