--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -351,7 +351,7 @@ fail me to tell of the multitudes of individuals \ldots
 This report is a case study of applying encapsulation, composition and distributed synchronization techniques to web application architecture with the use of Web Components, 
 a proposed extension to the W3C HTML5 document standard. 
 The author presents Speakur, a real-time social discussion plugin for the mobile and desktop web, 
-as an example of applying HTML5 Web Component technologies to realize software engineering principles such as modularity, encapsulation and separation of concerns when composing applications from components sourced from diverse authors.
+as an example of applying HTML5 Web Component technologies to realize software engineering principles such as encapsulation and interface-based abstraction, and the composition of applications from components sourced from diverse authors and frameworks.
 
 Web authors can add a Speakur discussion to their page by inserting a simple HTML element at the desired spot to give the page a real-time discussion or feedback system.
 Speakur uses the Polymer framework's implementation of the draft Web Components (WC) standard to achieve encapsulation of its internal implementation details from the containing page and present a simplified, well defined interface (API).
@@ -360,7 +360,7 @@ Web Components are a proposed World Wide Web Consortium (W3C) standard for writi
 This report reviews Web Component technologies and provides a case study for structuring a real-world WC applet that is embedded in a larger app or system.
 The major research question is whether W3C Web Components provide a viable path towards the encapsulation and composition principles that have largely eluded web engineers thus far. 
 In other words, \textit{are components really the future of the web}? 
-Subsidiary topics include assessing the maturity and suitability of current Web Components technologies for widespread deployment and how to efficiently synchronize component state across a distributed network.
+Subsidiary topics include assessing the maturity and suitability of current Web Components technologies for widespread deployment and the efficient synchronization of component state across distributed networks.
 
 
 \tableofcontents   % Table of Contents will be automatically
