--- a/latex/chapter-implementation.tex
+++ b/latex/chapter-implementation.tex
@@ -1,102 +1,32 @@
-\chapter{Making the Bibliography with BiB\TeX{}}\label{c:bib}
-\index{Making the Bibliography with BiBTeX%
-@\emph{Making the Bibliography with BiB\TeX{}}}%
+\chapter{Implementation}
+\index{Implementation%
+@\emph{Implementation}}%
 
-BiB\TeX{} 
-\index{BiBTeX@BiB\TeX{}}%
-allows one to generate automatically the bibliography 
-from a database of bibliographic 
-items. You need to do the following:
 
-\begin{enumerate}
-\item Create the bibliographic database, 
-\index{bibliographic database}%
-which is a file whose name ends in \texttt{.bib}. 
-\index{.bib@\texttt{.bib}}%
-Let us call it \texttt{diss.bib}. Entries in this file are like this:
-\begin{verbatim}
-@BOOK{knuth:tb,
-  author = "Donald K. Knuth",
-  title = "The \TeXbook",
-  publisher = "Addison-Wesley",
-  year = "1984",
-}
-@TECHREPORT{poorten:sp,
-  author = "Alf~J.~van der Poorten",
-  title = "Some problems of recurrent interest",
-  institution = "School of Mathematics and Physics,
-                 Macquarie University",
-  address = "North Ryde, Australia 2113",
-  number = "81-0037",
-  month = "August",
-  year = "1981",
-}
-@ARTICLE{erdos:oap,
- author = "Paul Erd{\"o}s and Paul Turan",
- title = "On a problem in the theory of uniform 
-          distribution, {I}", 
- journal = "Indag. Math.",
- volume = "10",
- year = "1948",
- pages = "370--378",
-}
-\end{verbatim}
+\section{Layout and Structure}
 
-\item Include a \cn{bibliographystyle} 
-\index{commands!bibliographystyle@\cn{bibliographystyle}}%
-command in your \LaTeX{} file, say 
+\section{Database Design}
 
-\cn{bibliographystyle\{plain\}} 
-and a \cn{bibliography} 
-\index{commands!bibliography@\cn{bibliography}}%
-command to load the bibliography, 
-in this case \cn{bibliography\{diss\}}, at the point of your 
-document where the bibliography should be inserted. 
+\section{Distributed Synchronization}
 
-The document at this point will look like this:
-\begin{verbatim}
-\bibliographystyle{plain}
-\bibliography{diss}
-\end{verbatim}
+\subsection{Data Bindings}
 
-\item Run \LaTeX{} on your main file, say \texttt{foo.tex}: 
-\texttt{latex foo}. This generates an auxiliary file 
-\texttt{foo.aux} with a list of \cn{cite} 
-\index{commands!cite@\cn{cite}}
-references.
+\subsection{Data-Bound Templates}
 
-\item Run BiB\TeX{} on your file: \texttt{bibtex foo}. 
-BiB\TeX{} reads the auxiliary file, looks up the 
-bibliographic database (\texttt{diss.bib}), 
-and writes a \texttt{.bbl} 
-\index{.bbl@\texttt{.bbl}}%
-file with the bibliographic information formated according to
-the bibliographic style file (\texttt{.bst}, 
-\index{.bst@\texttt{.bst}}%
-say \texttt{plain.bst}) 
-\index{plain.bst@\texttt{plain.bst}}%
-specified.  Messages about resources used and error messages
-are written to a \texttt{.blg} 
-\index{.blg@\texttt{.blg}}%
-file (in the case of this template, disstemplate.blg).
+\section{Security}
 
-\item Run \LaTeX{} again: \texttt{latex foo}, which now 
-reads the \texttt{.bbl} 
-\index{.bbl@\texttt{.bbl}}%
-reference file.
+\subsection{Authentication}
 
-\item Run \LaTeX{} for a third time: \texttt{latex foo}, 
-resolving all references.
+\subsection{Firebase Security Policy Rules}
 
-\end{enumerate}
+\section{Internationalization}
+\subsection{Architecture}
+\subsection{Libraries}
 
-This includes all bibliographic items that have been cited 
-in the document with a \cn{cite} 
-\index{commands!cite@\cn{cite}}%
-command. In order to include non cited items in the bibliography,
-use the command \cn{nocite}. For example, \cn{nocite\{knuth:tb\}}
-anywhere in the document (after \cn{begin\{document\}}) includes 
-in the bibliography the item with label \texttt{knuth:tb}. 
-In order to include \emph{all} items of the bibliographic 
-database, use the command \cn{nocite\{*\}}.
-\index{commands!nocite@\cn{nocite}}%
+\section{Responsive Design}
+
+\subsection{Mobile Users}
+
+\subsection{Accessibility}
+
+\section{Publishing and Deployment}
