Add "List of Source Listings" to table of contents - not sure if this will be allowed/needed but I can always take it out

--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -295,6 +295,7 @@
 
 \makeindex    % Make the index
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %		The document starts here.			     %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -329,6 +330,8 @@
 \begin{dedication}
 \index{Dedication@\emph{Dedication}}%
 Dedicated to my wife Andrea and to my parents.
+
+More...
 \end{dedication}
 
 
@@ -368,7 +371,7 @@ Subsidiary topics include assessing the maturity and suitability of current Web 
 
 \listoftables      % List of Tables and List of Figures will be placed
 \listoffigures     % here, if applicable.
-
+\lstlistoflistings
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
