--- a/latex/codelistings.tex
+++ b/latex/codelistings.tex
@@ -114,5 +114,17 @@
   {ö}{{\"o}}1
 }
 
-\makeatother
+%\makeatother
 
+
+% % Doesn't work, but the def below does. Got this by looking at utdiss2.sty.
+
+% \renewcommand{\lstlistingname}{Algorithm}% Listing -> Algorithm
+% \renewcommand{\lstlistlistingname}{List of \lstlistingname s}% List of Listings -> List of Algorithms
+
+\def\lstlistoflistings{%
+    \shortchapter*{List of Source Listings}
+    \addcontentsline{toc}{chapter}{List of Source Listings}
+    \pagestyle{plain}
+    \baselineskip=12pt plus .5pt minus .5pt
+    \@starttoc{lol}}
